# game-engine

./: CMakeLists.txt
engine/: CMakeLists.txt  main.cpp
engine/include/: GameWindow.h
engine/shaders/: DefaultVertexShader.shader  default.vshader
engine/src/: GameWindow.cpp  GameWindow.h
engine/src/GraphicsAPIs/: GraphicsAPI.cpp  GraphicsAPI.h  OpenGLAPI.cpp  OpenGLAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/src/Types/: Color.h
engine/src/stb_image/: stb_image.cpp
engine/src/utils/: String.cpp  String.h
lib/GLAD/: CMakeLists.txt
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
lib/GLFW/docs/html/: build_guide.html  compat_guide.html  compile_guide.html  context_guide.html  glfw3_8h.html  glfw3native_8h.html  glfw3native_8h_source.html  group__native.html  group__window.html  index.html  input_guide.html  intro_guide.html  jquery.js  modules.html  monitor_guide.html  moving_guide.html  news.html  pages.html  quick_guide.html  structGLFWimage.html  vulkan_guide.html  window_guide.html
lib/GLFW/src/: GameWindow.c  egl_context.h
lib/GLFW/tests/: opacity.c
